Migrated whole app to Compose